--- a/StageRaceFantasy/Client/Pages/FetchData.razor
+++ b/StageRaceFantasy/Client/Pages/FetchData.razor
@@ -6,7 +6,7 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
+@*@if (forecasts == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -33,14 +33,14 @@ else
             }
         </tbody>
     </table>
-}
+}*@
 
 @code {
-    private WeatherForecast[] forecasts;
+    @*private WeatherForecast[] forecasts;
 
     protected override async Task OnInitializedAsync()
     {
         forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
-    }
+    }*@
 
 }
