--- a/StageRaceFantasy/Client/Shared/NavMenu.razor
+++ b/StageRaceFantasy/Client/Shared/NavMenu.razor
@@ -13,6 +13,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="riders">
+                Riders
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="races">
                 Races
             </NavLink>
