--- a/StageRaceFantasy/Client/Riders/FetchData.razor
+++ b/StageRaceFantasy/Client/Riders/FetchData.razor
@@ -1,6 +1,9 @@
 ﻿@page "/riders"
+
 @using StageRaceFantasy.Shared.Models
-@inject HttpClient Http
+
+@inject HttpClient httpClient
+@inject IJSRuntime js
 
 <h1>Riders</h1>
 <div>
@@ -18,19 +21,23 @@ else if (riders.Length == 0)
 else
 {
     <MatTable Items="@riders"
-              FilterByColumnName="LastName"
-              ShowPaging="false"
-              PageSize="int.MaxValue"
-              Striped="true">
+                FilterByColumnName="LastName"
+                ShowPaging="false"
+                PageSize="int.MaxValue"
+                Striped="true">
         <MatTableHeader>
             <th>Id</th>
-            <th>FirstName</th>
-            <th>LastName</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th></th>
         </MatTableHeader>
         <MatTableRow>
             <td>@context.Id</td>
             <td>@context.FirstName</td>
             <td>@context.LastName</td>
+            <td>
+                <MatIconButton @onclick="@(() => DeleteRider(context.Id))" Icon="delete" Style="color: red" />
+            </td>
         </MatTableRow>
     </MatTable>
 }
@@ -40,6 +47,17 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        riders = await Http.GetFromJsonAsync<Rider[]>("api/riders");
+        riders = await httpClient.GetFromJsonAsync<Rider[]>("api/riders");
+    }
+
+    async Task DeleteRider(int riderId)
+    {
+        var rider = riders.First(x => x.Id == riderId);
+
+        if (await js.InvokeAsync<bool>("confirm", $"Do you want to delete rider {rider.FirstName} {rider.LastName}?"))
+        {
+            await httpClient.DeleteAsync($"api/riders/{rider.Id}");
+            await OnInitializedAsync();
+        }
     }
 }
