--- a/StageRaceFantasy/Client/Pages/Index.razor
+++ b/StageRaceFantasy/Client/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
 
-<h1>Stage Race Fantasy</h1>
+<MatHeadline1>Stage Race Fantasy</MatHeadline1>
 
-<p>Welcome to Stage Race Fantasy.</p>
+<MatHeadline4>Welcome to Stage Race Fantasy.</MatHeadline4>
