add fantasy teams

--- a/StageRaceFantasy/Client/Shared/NavMenu.razor
+++ b/StageRaceFantasy/Client/Shared/NavMenu.razor
@@ -6,6 +6,7 @@
                     <MatAppBarTitle>Stage Race Fantasy</MatAppBarTitle>
                 </MatAppBarSection>
                 <MatAppBarSection>
+                    <MatButton Unelevated="true" Link="fantasy-teams">Fantasy Teams</MatButton>
                     <MatButton Unelevated="true" Link="riders">Riders</MatButton>
                     <MatButton Unelevated="true" Link="races">Races</MatButton>
                 </MatAppBarSection>
