add no teams found message

--- a/StageRaceFantasy/Client/FantasyTeams/FetchData.razor
+++ b/StageRaceFantasy/Client/FantasyTeams/FetchData.razor
@@ -14,6 +14,10 @@
 {
     <MatBody1 Style="font-weight: bolder"><em>Loading...</em></MatBody1>
 }
+else if (fantasyTeams.Length == 0)
+{
+    <MatBody1 Style="font-weight: bolder"><em>No Teams Found.</em></MatBody1>
+}
 else
 {
     <MatTable Items="@fantasyTeams"
