remove limit on tabular results

--- a/StageRaceFantasy/Client/FantasyTeams/FetchData.razor
+++ b/StageRaceFantasy/Client/FantasyTeams/FetchData.razor
@@ -23,6 +23,7 @@ else
     <MatTable Items="@fantasyTeams"
               FilterByColumnName="Name"
               ShowPaging="false"
+              PageSize="int.MaxValue"
               Striped="true">
         <MatTableHeader>
             <th>Id</th>
