--- a/StageRaceFantasy/Client/Races/FetchData.razor
+++ b/StageRaceFantasy/Client/Races/FetchData.razor
@@ -20,6 +20,7 @@ else
     <MatTable Items="@races"
               FilterByColumnName="Name"
               ShowPaging="false"
+              PageSize="int.MaxValue"
               Striped="true">
         <MatTableHeader>
             <th>Id</th>
