create loader component

--- a/StageRaceFantasy/Client/FantasyTeams/ViewFantasyTeams.razor
+++ b/StageRaceFantasy/Client/FantasyTeams/ViewFantasyTeams.razor
@@ -12,7 +12,7 @@
 
 @if (fantasyTeams == null)
 {
-    <MatBody1 Style="font-weight: bolder"><em>Loading...</em></MatBody1>
+    <Loader />
 }
 else if (fantasyTeams.Length == 0)
 {
