--- a/StageRaceFantasy/Client/Races/ViewRaces.razor
+++ b/StageRaceFantasy/Client/Races/ViewRaces.razor
@@ -9,7 +9,7 @@
 
 @if (races == null)
 {
-    <MatBody1 Style="font-weight: bolder"><em>Loading...</em></MatBody1>
+    <Loader />
 }
 else if (races.Length == 0)
 {
