--- a/StageRaceFantasy/Client/Riders/ViewRiders.razor
+++ b/StageRaceFantasy/Client/Riders/ViewRiders.razor
@@ -12,7 +12,7 @@
 
 @if (riders == null)
 {
-    <MatBody1 Style="font-weight: bolder"><em>Loading...</em></MatBody1>
+    <Loader />
 }
 else if (riders.Length == 0)
 {
